[package]
name = "primg"
version = "0.1.0"
authors = ["Larry Ng <ng.larry@gmail.com>"]
description = "Reproducing images with geometric primitives.  Ported from https://github.com/fogleman/primitive"
homepage = "https://github.com/larryng/primg"
repository = "https://github.com/larryng/primg"
license = "MIT"
keywords = ["primitive", "image"]

[dependencies]
clap = "2.29"
image = "0.18.0"
num_cpus = "1.7.0"
rand = "0.4"
threadpool = "1.7.1"

[lib]
name = "primg"
path = "src/lib.rs"
crate-type = ["dylib", "rlib"]

[[bin]]
name = "main"
path = "src/bin/main.rs"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "~0.8.1", default-features = false }

#[profile.release]
#debug = true
